--- a/.github/workflows/opencode.yml
+++ b/.github/workflows/opencode.yml
@@ -28,4 +28,4 @@ jobs:
         env:
           OPENCODE_API_KEY: ${{ secrets.OPENCODE_API_KEY }}
         with:
-          model: opencode/grok-code
+          model: opencode/minimax-m2.1-free
