--- a/package.json
+++ b/package.json
@@ -15,31 +15,31 @@
   },
   "private": true,
   "devDependencies": {
-    "@angular-devkit/build-angular": "^18.1.1",
-    "@angular-devkit/core": "^18.1.1",
-    "@angular/animations": "^18.1.1",
-    "@angular/cdk": "^18.1.1",
-    "@angular/cli": "^18.1.1",
-    "@angular/common": "^18.1.1",
-    "@angular/compiler": "^18.1.1",
-    "@angular/compiler-cli": "^18.1.1",
-    "@angular/core": "^18.1.1",
-    "@angular/forms": "^18.1.1",
-    "@angular/language-service": "^18.1.1",
-    "@angular/material": "^18.1.1",
-    "@angular/platform-browser": "^18.1.1",
-    "@angular/platform-browser-dynamic": "^18.1.1",
+    "@angular-devkit/build-angular": "^19",
+    "@angular-devkit/core": "^19",
+    "@angular/animations": "^19",
+    "@angular/cdk": "^19",
+    "@angular/cli": "^19",
+    "@angular/common": "^19",
+    "@angular/compiler": "^19",
+    "@angular/compiler-cli": "^19",
+    "@angular/core": "^19",
+    "@angular/forms": "^19",
+    "@angular/language-service": "^19",
+    "@angular/material": "^19",
+    "@angular/platform-browser": "^19",
+    "@angular/platform-browser-dynamic": "^19",
     "@babel/core": "^7.26.10",
     "@ephox/agar": "8.0.1",
     "@ephox/bedrock-client": "^14.1.1",
     "@ephox/bedrock-server": "^14.1.3",
     "@hugerte/framework-integration-shared": "1.0.1",
-    "@storybook/addon-essentials": "^8.6.8",
-    "@storybook/addon-interactions": "^8.6.11",
+    "@storybook/addon-essentials": "~8.5",
+    "@storybook/addon-interactions": "~8.5",
     "@storybook/addon-links": "^8.2.5",
-    "@storybook/angular": "^8.2.5",
+    "@storybook/angular": "~8.5",
     "@storybook/blocks": "^8.2.5",
-    "@storybook/test": "^8.2.5",
+    "@storybook/test": "~8.5",
     "@tinymce/eslint-plugin": "^3.0.0",
     "@types/chai": "^4.3.16",
     "@types/node": "^20.14.12",
@@ -61,12 +61,12 @@
     "regenerator-runtime": "^0.14.1",
     "rimraf": "^6.0.1",
     "rxjs": "^7.8.1",
-    "storybook": "^8.2.5",
+    "storybook": "~8.5",
     "to-string-loader": "^1.1.5",
     "tslib": "^2.8.1",
     "typescript": "~5.5.0",
     "webpack": "^5.95.0",
-    "zone.js": "~0.14.8"
+    "zone.js": "~0.15.0"
   },
   "version": "1.0.3",
   "name": "@hugerte/hugerte-angular",
