--- a/package.json
+++ b/package.json
@@ -15,31 +15,30 @@
   },
   "private": true,
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19",
-    "@angular-devkit/core": "^19",
-    "@angular/animations": "^19",
-    "@angular/cdk": "^19",
-    "@angular/cli": "^19",
-    "@angular/common": "^19",
-    "@angular/compiler": "^19",
-    "@angular/compiler-cli": "^19",
-    "@angular/core": "^19",
-    "@angular/forms": "^19",
-    "@angular/language-service": "^19",
-    "@angular/material": "^19",
-    "@angular/platform-browser": "^19",
-    "@angular/platform-browser-dynamic": "^19",
+    "@angular-devkit/build-angular": "^20",
+    "@angular-devkit/core": "^20",
+    "@angular/animations": "^20",
+    "@angular/cdk": "^20",
+    "@angular/cli": "^20",
+    "@angular/common": "^20",
+    "@angular/compiler": "^20",
+    "@angular/compiler-cli": "^20",
+    "@angular/core": "^20",
+    "@angular/forms": "^20",
+    "@angular/language-service": "^20",
+    "@angular/material": "^20",
+    "@angular/platform-browser": "^20",
     "@babel/core": "^7.26.10",
     "@ephox/agar": "8.0.1",
     "@ephox/bedrock-client": "^14.1.1",
     "@ephox/bedrock-server": "^14.1.3",
     "@hugerte/framework-integration-shared": "1.0.1",
-    "@storybook/addon-essentials": "~8.5",
-    "@storybook/addon-interactions": "~8.5",
-    "@storybook/addon-links": "^8.2.5",
-    "@storybook/angular": "~8.5",
-    "@storybook/blocks": "^8.2.5",
-    "@storybook/test": "~8.5",
+    "@storybook/addon-essentials": "9.0.0-alpha.12",
+    "@storybook/addon-interactions": "^9.0.0-alpha.10",
+    "@storybook/addon-links": "^9",
+    "@storybook/angular": "^9",
+    "@storybook/blocks": "^9.0.0-alpha.17",
+    "@storybook/test": "^9.0.0-alpha.2",
     "@tinymce/eslint-plugin": "^3.0.0",
     "@types/chai": "^4.3.16",
     "@types/node": "^20.14.12",
@@ -61,12 +60,12 @@
     "regenerator-runtime": "^0.14.1",
     "rimraf": "^6.0.1",
     "rxjs": "^7.8.1",
-    "storybook": "~8.5",
+    "storybook": "^9",
     "to-string-loader": "^1.1.5",
     "tslib": "^2.8.1",
-    "typescript": "~5.5.0",
+    "typescript": "^5.9.3",
     "webpack": "^5.95.0",
-    "zone.js": "~0.15.0"
+    "zone.js": "~0.16.0"
   },
   "version": "1.0.3",
   "name": "@hugerte/hugerte-angular",
