--- a/.storybook/tsconfig.json
+++ b/.storybook/tsconfig.json
@@ -3,6 +3,8 @@
   "compilerOptions": {
     "skipLibCheck": true,
     "types": ["node"],
+    "moduleResolution": "bundler",
+    "module": "ES2022",
     "allowSyntheticDefaultImports": true,
     "resolveJsonModule": true,
     "target": "ES2022"
